<resources>
    <string name="app_name">UmpBot</string>
    <string name="strike_button_text">Strike</string>
    <string name="ball_button_text">Ball</string>
    <string name="count_string">Count</string>
    <string name="zero">0</string>
    <string name="out_message">Yeerrr Oughta There!</string>
    <string name="walk_message">Take Your Base!</string>
    <string name="reset_button_text">Reset</string>
    <string name="dash">-</string>
    <string name="about">About</string>
    <string name="about_page_author">Author: Eric Chadwick</string>
    <string name="about_page_title">UmpBot</string>
    <string name="strikeOuts">Strikeouts:</string>
</resources>
